Fixed page break in tables.

--- a/app/assets/stylesheets/pdf.css.scss
+++ b/app/assets/stylesheets/pdf.css.scss
@@ -7,6 +7,7 @@
     font-style: normal;
 }
 
+
 body, table {
   font-family: Optima,serif;
   font-size: 14px;
@@ -69,3 +70,12 @@ p {
   clear: both;
   page-break-after: always;
 }
+
+.small-text {
+  font-size: 10px;
+}
+
+table, tr, td, th, tbody, thead, tfoot, .avoid-break {
+    page-break-inside: avoid !important;
+}
+
